-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17.0.2, 18
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280558 | 17.0.3-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8281540 | 17.0.3 | Goetz Lindenmaier | P3 | Resolved | Fixed | b02 |
| JDK-8285299 | 11.0.16-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8284651 | 11.0.16 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
The attached Fuzzer test fails like:
$ ../build/linux-x86_64-server-fastdebug/images/jdk/bin/java -Xmx512m -XX:+UnlockDiagnosticVMOptions -Xcomp -XX:CompileOnly=Test -XX:-TieredCompilation Test
# Internal Error (/home/shade/trunks/jdk/src/hotspot/share/opto/block.cpp:1252), pid=956055, tid=956068
# assert(n->is_Root() || n->is_Region() || n->is_Phi() || n->is_MachMerge() || def_block->dominates(block)) failed: uses must be dominated by definitions
Bisection points to
- backported by
-
JDK-8280558 C2: assert(n->is_Root() || n->is_Region() || n->is_Phi() || n->is_MachMerge() || def_block->dominates(block)) failed: uses must be dominated by definitions
-
- Resolved
-
-
JDK-8281540 C2: assert(n->is_Root() || n->is_Region() || n->is_Phi() || n->is_MachMerge() || def_block->dominates(block)) failed: uses must be dominated by definitions
-
- Resolved
-
-
JDK-8284651 C2: assert(n->is_Root() || n->is_Region() || n->is_Phi() || n->is_MachMerge() || def_block->dominates(block)) failed: uses must be dominated by definitions
-
- Resolved
-
-
JDK-8285299 C2: assert(n->is_Root() || n->is_Region() || n->is_Phi() || n->is_MachMerge() || def_block->dominates(block)) failed: uses must be dominated by definitions
-
- Resolved
-
- relates to
-
JDK-8272562 C2: assert(false) failed: Bad graph detected in build_loop_late
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/4741ab5a
-
Commit
openjdk/jdk17u-dev/f3916545
-
Commit
openjdk/jdk/3e798dd4
-
Review
openjdk/jdk11u-dev/1002
-
Review
openjdk/jdk17u-dev/143
-
Review
openjdk/jdk/6429